[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.5
margin_right = 169.5
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="WIP" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 200.0

[node name="PauseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "| |"

[node name="GameOver" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -125.0
margin_right = 200.0
margin_bottom = 150.0
popup_exclusive = true

[node name="Label" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -120.0
margin_right = 117.0
margin_bottom = -40.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1

[node name="TitleButton" type="Button" parent="GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -96.0
margin_right = 76.5
margin_bottom = -24.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Back To Title"

[node name="RetryButton" type="Button" parent="GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -176.0
margin_right = 76.5
margin_bottom = -104.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Retry"

[node name="PausePopup" type="PopupDialog" parent="."]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -175.0
margin_right = 200.0
margin_bottom = 175.0
popup_exclusive = true

[node name="Label" type="Label" parent="PausePopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.0
margin_top = 10.0
margin_right = 117.0
margin_bottom = 90.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Paused"
align = 1

[node name="ContinueButton" type="Button" parent="PausePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -123.5
margin_top = -260.0
margin_right = 123.5
margin_bottom = -193.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Continue"

[node name="TitleButton2" type="Button" parent="PausePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -100.0
margin_right = 180.0
margin_bottom = -28.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Quit To Title"

[node name="SettingsButton" type="Button" parent="PausePopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.5
margin_top = 170.0
margin_right = 136.5
margin_bottom = 237.0
custom_fonts/font = SubResource( 5 )
text = "Settings"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="GameOver/TitleButton" to="." method="_on_TitleButton_pressed"]
[connection signal="pressed" from="GameOver/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="PausePopup/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PausePopup/TitleButton2" to="." method="_on_TitleButton_pressed"]
[connection signal="pressed" from="PausePopup/SettingsButton" to="." method="_on_SettingsButton_pressed"]
